--- a/adaliclothing-mvc/backend/package.json
+++ b/adaliclothing-mvc/backend/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "dependencies": {
     "@google-cloud/vision": "^4.3.3",
-    "bcrypt": "^5.1.1",
+    "bcryptjs": "^3.0.2",
     "body-parser": "^1.20.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
